RGR6lab/RGR6lab/x64/Debug/RGR6lab.log
  Compiling CUDA source file kernel.cu...
  
  C:\Users\79133\source\repos\RGR6lab>"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.39.33519\bin\HostX64\x64" -x cu   -I"C:\Users\79133\source\repos\RGR6lab\packages\fftw_339.3.3.9.202108273\build\native\..\..\lib\native\fftw-debug\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\include"  -G   --keep-dir RGR6lab\x64\Debug  -maxrregcount=0   --machine 64 --compile -cudart static  -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/FdRGR6lab\x64\Debug\vc143.pdb" -o C:\Users\79133\source\repos\RGR6lab\RGR6lab\x64\Debug\kernel.cu.obj "C:\Users\79133\source\repos\RGR6lab\kernel.cu" 
C:\Users\79133\source\repos\RGR6lab\kernel.cu(98): error : namespace "thrust" has no member "device"
        thrust::gather(thrust::device, indices, indices + 1000 * 1000, thrust::make_permutation_iterator(d_matrix_thrust.begin(), thrust::make_transform_iterator(indices, thrust::placeholders::_1 % 1000 * 1000 + thrust::placeholders::_1 / 1000)), d_transposed_thrust.begin());
                               ^
  
C:\Users\79133\source\repos\RGR6lab\kernel.cu(98): error : no instance of overloaded function "thrust::gather" matches the argument list
              argument types are: (<error-type>, thrust::counting_iterator<int, thrust::use_default, thrust::use_default, thrust::use_default>, thrust::counting_iterator<int, thrust::use_default, thrust::use_default, thrust::use_default>, thrust::permutation_iterator<thrust::detail::normal_iterator<thrust::device_ptr<float>>, thrust::transform_iterator<thrust::detail::functional::actor<thrust::detail::functional::composite<thrust::detail::functional::transparent_binary_operator<thrust::plus<void>>, thrust::detail::functional::actor<thrust::detail::functional::composite<thrust::detail::functional::transparent_binary_operator<thrust::multiplies<void>>, thrust::detail::functional::actor<thrust::detail::functional::composite<thrust::detail::functional::transparent_binary_operator<thrust::modulus<void>>, thrust::detail::functional::actor<thrust::detail::functional::argument<0U>>, thrust::detail::functional::value<int>, thrust::null_type, thrust::null_type, thrust::null_type, thrust::null_type, thrust::null_type, thrust::null_type, thrust::null_type, thrust::null_type>>, thrust::detail::functional::value<int>, thrust::null_type, thrust::null_type, thrust::null_type, thrust::null_type, thrust::null_type, thrust::null_type, thrust::null_type, thrust::null_type>>, thrust::detail::functional::actor<thrust::detail::functional::composite<thrust::detail::functional::transparent_binary_operator<thrust::divides<void>>, thrust::detail::functional::actor<thrust::detail::functional::argument<0U>>, thrust::detail::functional::value<int>, thrust::null_type, thrust::null_type, thrust::null_type, thrust::null_type, thrust::null_type, thrust::null_type, thrust::null_type, thrust::null_type>>, thrust::null_type, thrust::null_type, thrust::null_type, thrust::null_type, thrust::null_type, thrust::null_type, thrust::null_type, thrust::null_type>>, thrust::counting_iterator<int, thrust::use_default, thrust::use_default, thrust::use_default>, thrust::use_default, thrust::use_default>>, thrust::detail::normal_iterator<thrust::device_ptr<float>>)
        thrust::gather(thrust::device, indices, indices + 1000 * 1000, thrust::make_permutation_iterator(d_matrix_thrust.begin(), thrust::make_transform_iterator(indices, thrust::placeholders::_1 % 1000 * 1000 + thrust::placeholders::_1 / 1000)), d_transposed_thrust.begin());
        ^
  
  2 errors detected in the compilation of "C:/Users/79133/source/repos/RGR6lab/kernel.cu".
  kernel.cu
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\BuildCustomizations\CUDA 12.3.targets(799,9): error MSB3721: выход из команды ""C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.39.33519\bin\HostX64\x64" -x cu   -I"C:\Users\79133\source\repos\RGR6lab\packages\fftw_339.3.3.9.202108273\build\native\..\..\lib\native\fftw-debug\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\include"  -G   --keep-dir RGR6lab\x64\Debug  -maxrregcount=0   --machine 64 --compile -cudart static  -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/FdRGR6lab\x64\Debug\vc143.pdb" -o C:\Users\79133\source\repos\RGR6lab\RGR6lab\x64\Debug\kernel.cu.obj "C:\Users\79133\source\repos\RGR6lab\kernel.cu"" с кодом "2".
